Update social icons

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 			<!-- <a href="#"><span class="socicon-pinterest"></span></a> -->
 			<!-- <a href="#"><span class="socicon-instagram"></span></a> -->
 			<a href="https://twitter.com/dragarwals_eye"><span class="socicon-twitter"></span></a>
-			<a href="https://www.facebook.com/DrAgarwalsEyeHospital/?fref=ts"><span class="socicon-facebook"></span></a>
+			<a href="https://www.facebook.com/DrAgarwalsEyeHospital"><span class="socicon-facebook"></span></a>
+			<a href="https://www.youtube.com/user/dragarwaleye"><span class="socicon-youtube"></span></a>
+			<a href="https://www.linkedin.com/company/dr-agarwal%27s-eye-hospital"><span class="socicon-linkedin"></span></a>
 		</p>
 		</div>
 	</div>
